@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-387: GiraphRunner's better handling of configuration property
+  arguments. (netj via aching)
 
   GIRAPH-385: Script for running on all profiles. (nitay via aching)
 
